--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,113 +3,42 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
+@article{Abdurro_uf_2022,
+   title={The Seventeenth Data Release of the Sloan Digital Sky Surveys: Complete Release of MaNGA, MaStar, and APOGEE-2 Data},
+   volume={259},
+   ISSN={1538-4365},
+   url={http://dx.doi.org/10.3847/1538-4365/ac4414},
+   DOI={10.3847/1538-4365/ac4414},
+   number={2},
+   journal={The Astrophysical Journal Supplement Series},
+   publisher={American Astronomical Society},
+   author={Abdurro’uf and Accetta, Katherine and Aerts, Conny and Silva Aguirre, Víctor and Ahumada, Romina and Ajgaonkar, Nikhil and Filiz Ak, N. and Alam, Shadab and Allende Prieto, Carlos and Almeida, Andrés and Anders, Friedrich and Anderson, Scott F. and Andrews, Brett H. and Anguiano, Borja and Aquino-Ortíz, Erik and Aragón-Salamanca, Alfonso and Argudo-Fernández, Maria and Ata, Metin and Aubert, Marie and Avila-Reese, Vladimir and Badenes, Carles and Barbá, Rodolfo H. and Barger, Kat and Barrera-Ballesteros, Jorge K. and Beaton, Rachael L. and Beers, Timothy C. and Belfiore, Francesco and Bender, Chad F. and Bernardi, Mariangela and Bershady, Matthew A. and Beutler, Florian and Bidin, Christian Moni and Bird, Jonathan C. and Bizyaev, Dmitry and Blanc, Guillermo A. and Blanton, Michael R. and Boardman, Nicholas Fraser and Bolton, Adam S. and Boquien, Médéric and Borissova, Jura and Bovy, Jo and Brandt, W. N. and Brown, Jordan and Brownstein, Joel R. and Brusa, Marcella and Buchner, Johannes and Bundy, Kevin and Burchett, Joseph N. and Bureau, Martin and Burgasser, Adam and Cabang, Tuesday K. and Campbell, Stephanie and Cappellari, Michele and Carlberg, Joleen K. and Wanderley, Fábio Carneiro and Carrera, Ricardo and Cash, Jennifer and Chen, Yan-Ping and Chen, Wei-Huai and Cherinka, Brian and Chiappini, Cristina and Choi, Peter Doohyun and Chojnowski, S. Drew and Chung, Haeun and Clerc, Nicolas and Cohen, Roger E. and Comerford, Julia M. and Comparat, Johan and da Costa, Luiz and Covey, Kevin and Crane, Jeffrey D. and Cruz-Gonzalez, Irene and Culhane, Connor and Cunha, Katia and Dai 戴, Y. Sophia 昱 and Damke, Guillermo and Darling, Jeremy and Davidson Jr., James W. and Davies, Roger and Dawson, Kyle and De Lee, Nathan and Diamond-Stanic, Aleksandar M. and Cano-Díaz, Mariana and Sánchez, Helena Domínguez and Donor, John and Duckworth, Chris and Dwelly, Tom and Eisenstein, Daniel J. and Elsworth, Yvonne P. and Emsellem, Eric and Eracleous, Mike and Escoffier, Stephanie and Fan, Xiaohui and Farr, Emily and Feng, Shuai and Fernández-Trincado, José G. and Feuillet, Diane and Filipp, Andreas and Fillingham, Sean P and Frinchaboy, Peter M. and Fromenteau, Sebastien and Galbany, Lluís and García, Rafael A. and García-Hernández, D. A. and Ge, Junqiang and Geisler, Doug and Gelfand, Joseph and Géron, Tobias and Gibson, Benjamin J. and Goddy, Julian and Godoy-Rivera, Diego and Grabowski, Kathleen and Green, Paul J. and Greener, Michael and Grier, Catherine J. and Griffith, Emily and Guo, Hong and Guy, Julien and Hadjara, Massinissa and Harding, Paul and Hasselquist, Sten and Hayes, Christian R. and Hearty, Fred and Hernández, Jesús and Hill, Lewis and Hogg, David W. and Holtzman, Jon A. and Horta, Danny and Hsieh, Bau-Ching and Hsu, Chin-Hao and Hsu, Yun-Hsin and Huber, Daniel and Huertas-Company, Marc and Hutchinson, Brian and Hwang, Ho Seong and Ibarra-Medel, Héctor J. and Chitham, Jacob Ider and Ilha, Gabriele S. and Imig, Julie and Jaekle, Will and Jayasinghe, Tharindu and Ji, Xihan and Johnson, Jennifer A. and Jones, Amy and Jönsson, Henrik and Katkov, Ivan and Khalatyan, Dr. Arman and Kinemuchi, Karen and Kisku, Shobhit and Knapen, Johan H. and Kneib, Jean-Paul and Kollmeier, Juna A. and Kong, Miranda and Kounkel, Marina and Kreckel, Kathryn and Krishnarao, Dhanesh and Lacerna, Ivan and Lane, Richard R. and Langgin, Rachel and Lavender, Ramon and Law, David R. and Lazarz, Daniel and Leung, Henry W. and Leung, Ho-Hin and Lewis, Hannah M. and Li, Cheng and Li, Ran and Lian, Jianhui and Liang, Fu-Heng and Lin 林, Lihwai 俐 暉 and Lin, Yen-Ting and Lin, Sicheng and Lintott, Chris and Long, Dan and Longa-Peña, Penélope and López-Cobá, Carlos and Lu, Shengdong and Lundgren, Britt F. and Luo, Yuanze and Mackereth, J. Ted and de la Macorra, Axel and Mahadevan, Suvrath and Majewski, Steven R. and Manchado, Arturo and Mandeville, Travis and Maraston, Claudia and Margalef-Bentabol, Berta and Masseron, Thomas and Masters, Karen L. and Mathur, Savita and McDermid, Richard M. and Mckay, Myles and Merloni, Andrea and Merrifield, Michael and Meszaros, Szabolcs and Miglio, Andrea and Di Mille, Francesco and Minniti, Dante and Minsley, Rebecca and Monachesi, Antonela and Moon, Jeongin and Mosser, Benoit and Mulchaey, John and Muna, Demitri and Muñoz, Ricardo R. and Myers, Adam D. and Myers, Natalie and Nadathur, Seshadri and Nair, Preethi and Nandra, Kirpal and Neumann, Justus and Newman, Jeffrey A. and Nidever, David L. and Nikakhtar, Farnik and Nitschelm, Christian and O’Connell, Julia E. and Garma-Oehmichen, Luis and Luan Souza de Oliveira, Gabriel and Olney, Richard and Oravetz, Daniel and Ortigoza-Urdaneta, Mario and Osorio, Yeisson and Otter, Justin and Pace, Zachary J. and Padilla, Nelson and Pan, Kaike and Pan, Hsi-An and Parikh, Taniya and Parker, James and Peirani, Sebastien and Peña Ramírez, Karla and Penny, Samantha and Percival, Will J. and Perez-Fournon, Ismael and Pinsonneault, Marc and Poidevin, Frédérick and Poovelil, Vijith Jacob and Price-Whelan, Adrian M. and Bárbara de Andrade Queiroz, Anna and Raddick, M. Jordan and Ray, Amy and Rembold, Sandro Barboza and Riddle, Nicole and Riffel, Rogemar A. and Riffel, Rogério and Rix, Hans-Walter and Robin, Annie C. and Rodríguez-Puebla, Aldo and Roman-Lopes, Alexandre and Román-Zúñiga, Carlos and Rose, Benjamin and Ross, Ashley J. and Rossi, Graziano and Rubin, Kate H. R. and Salvato, Mara and Sánchez, Sebástian F. and Sánchez-Gallego, José R. and Sanderson, Robyn and Santana Rojas, Felipe Antonio and Sarceno, Edgar and Sarmiento, Regina and Sayres, Conor and Sazonova, Elizaveta and Schaefer, Adam L. and Schiavon, Ricardo and Schlegel, David J and Schneider, Donald P. and Schultheis, Mathias and Schwope, Axel and Serenelli, Aldo and Serna, Javier and Shao, Zhengyi and Shapiro, Griffin and Sharma, Anubhav and Shen, Yue and Shetrone, Matthew and Shu, Yiping and Simon, Joshua D. and Skrutskie, M. F. and Smethurst, Rebecca and Smith, Verne and Sobeck, Jennifer and Spoo, Taylor and Sprague, Dani and Stark, David V. and Stassun, Keivan G. and Steinmetz, Matthias and Stello, Dennis and Stone-Martinez, Alexander and Storchi-Bergmann, Thaisa and Stringfellow, Guy S. and Stutz, Amelia and Su, Yung-Chau and Taghizadeh-Popp, Manuchehr and Talbot, Michael S. and Tayar, Jamie and Telles, Eduardo and Teske, Johanna and Thakar, Ani and Theissen, Christopher and Tkachenko, Andrew and Thomas, Daniel and Tojeiro, Rita and Hernandez Toledo, Hector and Troup, Nicholas W. and Trump, Jonathan R. and Trussler, James and Turner, Jacqueline and Tuttle, Sarah and Unda-Sanzana, Eduardo and Vázquez-Mata, José Antonio and Valentini, Marica and Valenzuela, Octavio and Vargas-González, Jaime and Vargas-Magaña, Mariana and Alfaro, Pablo Vera and Villanova, Sandro and Vincenzo, Fiorenzo and Wake, David and Warfield, Jack T. and Washington, Jessica Diane and Weaver, Benjamin Alan and Weijmans, Anne-Marie and Weinberg, David H. and Weiss, Achim and Westfall, Kyle B. and Wild, Vivienne and Wilde, Matthew C. and Wilson, John C. and Wilson, Robert F. and Wilson, Mikayla and Wolf, Julien and Wood-Vasey, W. M. and Yan 严, Renbin 人斌 and Zamora, Olga and Zasowski, Gail and Zhang, Kai and Zhao, Cheng and Zheng, Zheng and Zheng, Zheng and Zhu, Kai},
+   year={2022},
+   month=mar, pages={35} }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
+@article{Glikman_2023,
+   title={A Candidate Dual QSO at Cosmic Noon},
+   volume={951},
+   ISSN={2041-8213},
+   url={http://dx.doi.org/10.3847/2041-8213/acda2f},
+   DOI={10.3847/2041-8213/acda2f},
+   number={1},
+   journal={The Astrophysical Journal Letters},
+   publisher={American Astronomical Society},
+   author={Glikman, Eilat and Langgin, Rachel and Johnstone, Makoto A. and Yoon, Ilsang and Comerford, Julia M. and Simmons, Brooke D. and Stacey, Hannah and Lacy, Mark and O’Meara, John M.},
+   year={2023},
+   month=jul, pages={L18} }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@INPROCEEDINGS{2023AAS...24113705L,
+       author = {{Langgin}, Rachel},
+        title = "{A Dual QSO at Cosmic Noon}",
+    booktitle = {American Astronomical Society Meeting Abstracts},
+         year = 2023,
+       series = {American Astronomical Society Meeting Abstracts},
+       volume = {241},
+        month = jan,
+          eid = {137.05},
+        pages = {137.05},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023AAS...24113705L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
