--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,7 +27,8 @@
    publisher={American Astronomical Society},
    author={Glikman, Eilat and Langgin, Rachel and Johnstone, Makoto A. and Yoon, Ilsang and Comerford, Julia M. and Simmons, Brooke D. and Stacey, Hannah and Lacy, Mark and O’Meara, John M.},
    year={2023},
-   month=jul, pages={L18} }
+   month=jul, pages={L18},
+   selected={true}}
 
 @INPROCEEDINGS{2023AAS...24113705L,
        author = {{Langgin}, Rachel},
