--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,7 +28,9 @@
    author={Glikman, Eilat and Langgin, Rachel and Johnstone, Makoto A. and Yoon, Ilsang and Comerford, Julia M. and Simmons, Brooke D. and Stacey, Hannah and Lacy, Mark and O’Meara, John M.},
    year={2023},
    month=jul, pages={L18},
-   selected={true}}
+   selected={true},
+   inspirehep_id = {2041-8213}
+}
 
 @INPROCEEDINGS{2023AAS...24113705L,
        author = {{Langgin}, Rachel},
