--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,6 +16,7 @@
    year={2022},
    month=mar, pages={35},
    inspirehep_id = {538-4365},
+   url ={https://ui.adsabs.harvard.edu/abs/2022ApJS..259...35A/abstract}
 }
 
 @article{Glikman_2023,
@@ -31,7 +32,8 @@
    year={2023},
    month=jul, pages={L18},
    selected={true},
-   inspirehep_id = {2041-8213}
+   inspirehep_id = {2041-8213},
+   url = {https://ui.adsabs.harvard.edu/abs/2023ApJ...951L..18G/abstract}
 }
 
 @INPROCEEDINGS{2023AAS...24113705L,
@@ -46,4 +48,5 @@
         pages = {137.05},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2023AAS...24113705L},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+      url = {https://ui.adsabs.harvard.edu/abs/2023AAS...24113705L/abstract}
 }
