--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -47,7 +47,7 @@
           eid = {137.05},
         pages = {137.05},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2023AAS...24113705L},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
       preview = {image.png},
       url = {https://ui.adsabs.harvard.edu/abs/2023AAS...24113705L/abstract}
 }
