--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -50,6 +50,6 @@
         pages = {137.05},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2023AAS...24113705L},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-      preview = {image.png},
+      preview = {oemp01e0q_raw.png},
       html = {https://ui.adsabs.harvard.edu/abs/2023AAS...24113705L/abstract}
 }
