--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -53,3 +53,13 @@
       preview = {oemp01e0q_raw.png},
       html = {https://ui.adsabs.harvard.edu/abs/2023AAS...24113705L/abstract}
 }
+
+@mastersthesis{Langgin2023,
+   type={Bachelor's Thesis},
+   author={{Langgin}, Rachel},
+   title={A A Spectral Analysis of Red and Blue Quasars and their Effect on Galactic Evolution},
+   year={2023},
+   month=may,
+   school={Haverford College},
+   pdf={Langgin_Astrophysics_Senior_Thesis.pdf}
+}
