--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,8 @@
    month=mar, pages={35},
    html ={https://ui.adsabs.harvard.edu/abs/2022ApJS..259...35A/abstract},
    preview={12704.png},
-   arxiv = {2112.02026}
+   arxiv = {2112.02026},
+   bibtex_show={true}
 }
 
 @article{Glikman_2023,
@@ -35,7 +36,8 @@
    selected={true},
    preview={image.png},
    html = {https://ui.adsabs.harvard.edu/abs/2023ApJ...951L..18G/abstract},
-   arxiv = {2306.00068}
+   arxiv = {2306.00068},
+   bibtex_show={true}
 }
 
 @INPROCEEDINGS{2023AAS...24113705L,
@@ -51,15 +53,18 @@
        adsurl = {https://ui.adsabs.harvard.edu/abs/2023AAS...24113705L},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System},
       preview = {oemp01e0q_raw.png},
-      html = {https://ui.adsabs.harvard.edu/abs/2023AAS...24113705L/abstract}
+      html = {https://ui.adsabs.harvard.edu/abs/2023AAS...24113705L/abstract},
+      bibtex_show={true}
 }
 
 @mastersthesis{Langgin2023,
    type={Bachelor's Thesis},
    author={{Langgin}, Rachel},
-   title={A A Spectral Analysis of Red and Blue Quasars and their Effect on Galactic Evolution},
+   title={Bachelor's Thesis: A Spectral Analysis of Red and Blue Quasars and their Effect on Galactic Evolution},
    year={2023},
    month=may,
    school={Haverford College},
-   pdf={Langgin_Astrophysics_Senior_Thesis.pdf}
+   pdf={Langgin_Astrophysics_Senior_Thesis.pdf},
+   preview={hostsubbedcopy2.jpeg},
+   bibtex_show={true}
 }
