--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,8 @@
    html ={https://ui.adsabs.harvard.edu/abs/2022ApJS..259...35A/abstract},
    preview={12704.png},
    arxiv = {2112.02026},
-   bibtex_show={true}
+   bibtex_show={true},
+   poster={Langgin_Poster_Performing_Elliptical_Isophote_Analysis_with_Photutils_on_Barred_GalaxyZoo3D_Masks_from_SDSS_IV_MaNGA_Galaxies.pdf}
 }
 
 @article{Glikman_2023,
@@ -54,7 +55,8 @@
       adsnote = {Provided by the SAO/NASA Astrophysics Data System},
       preview = {oemp01e0q_raw.png},
       html = {https://ui.adsabs.harvard.edu/abs/2023AAS...24113705L/abstract},
-      bibtex_show={true}
+      bibtex_show={true},
+      poster={KINSC–A Dual Red QSO at Cosmic Noon–Langgin.pdf}
 }
 
 @mastersthesis{Langgin2023,
@@ -66,5 +68,6 @@
    school={Haverford College},
    pdf={Langgin_Astrophysics_Senior_Thesis.pdf},
    preview={hostsubbedcopy2.jpeg},
-   bibtex_show={true}
+   bibtex_show={true},
+   poster={LangginThesisPoster2023.pdf}
 }
