--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -56,7 +56,7 @@
       preview = {oemp01e0q_raw.png},
       html = {https://ui.adsabs.harvard.edu/abs/2023AAS...24113705L/abstract},
       bibtex_show={true},
-      poster={KINSC–A Dual Red QSO at Cosmic Noon–Langgin.pdf}
+      poster={LangginSummer22ResearchPoster.pdf}
 }
 
 @mastersthesis{Langgin2023,
